--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@
 
         h1, h2, h3 {
             margin-bottom: 1rem;
+            font-family: 'Bree Serif', serif;
         }
 
         h1 {
